// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MicrophoneButton > 12. Snapshot test: idle state 1`] = `
<div>
  <div
    class="flex flex-col items-center gap-3"
  >
    <div
      class="relative flex items-center justify-center"
    >
      <button
        class="relative w-16 h-16 rounded-full flex items-center justify-center transition-all duration-300 outline-none border focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-2 focus-visible:ring-offset-transparent bg-zinc-900 border-zinc-700 hover:border-zinc-500"
        data-testid="mic-button"
      >
        <svg
          data-testid="icon-mic-off"
        />
      </button>
    </div>
    <span
      class="text-xs font-semibold tracking-wide text-zinc-500"
    >
      Click to speak
    </span>
  </div>
</div>
`;

exports[`MicrophoneButton > 13. Snapshot test: listening state 1`] = `
<div>
  <div
    class="flex flex-col items-center gap-3"
  >
    <div
      class="relative flex items-center justify-center"
    >
      <div
        class="absolute rounded-full border border-indigo-400/20"
      />
      <div
        class="absolute rounded-full border border-indigo-400/20"
      />
      <div
        class="absolute rounded-full border border-indigo-400/20"
      />
      <button
        class="relative w-16 h-16 rounded-full flex items-center justify-center transition-all duration-300 outline-none border focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-2 focus-visible:ring-offset-transparent bg-indigo-600 border-indigo-500 shadow-[0_0_30px_rgba(99,102,241,0.4)]"
        data-testid="mic-button"
      >
        <svg
          data-testid="icon-mic"
        />
      </button>
    </div>
    <span
      class="text-xs font-semibold tracking-wide text-indigo-400"
    >
      Listening...
    </span>
  </div>
</div>
`;

exports[`MicrophoneButton > 14. Snapshot test: error state 1`] = `
<div>
  <div
    class="flex flex-col items-center gap-3"
  >
    <div
      class="relative flex items-center justify-center"
    >
      <button
        class="relative w-16 h-16 rounded-full flex items-center justify-center transition-all duration-300 outline-none border focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-2 focus-visible:ring-offset-transparent bg-red-500/15 border-red-500/40"
        data-testid="mic-button"
      >
        <svg
          data-testid="icon-alert"
        />
      </button>
    </div>
    <span
      class="text-xs font-semibold tracking-wide text-red-400"
    >
      Mic error
    </span>
  </div>
</div>
`;
